--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday is lucky?</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
-    <h1>Check is your birthday lucky?</h1>
-    <label for="dob-input">Enter your Birthdate</label>
-    <input type="date" class="dob-input"/>
-    <br/>
-    <br/>
-    <label for="lucky-number-input">Enter your lucky number</label>
-    <input type="number" class="lucky-number-input">
-    <br/>
-    <br/>
-    <button class="check-btn">Check</button>
-    <br/>
-    <br/>
-    <p class="output-div"></p>
+</head>
+
+<body>
+    <section>
+        <div class="container">
+            <h1>Check is your birthday lucky? 🥳</h1>
+            <br />
+            <label for="dob-input">Enter your Birthdate :</label>
+            <br />
+            <input type="date" class="dob-input" />
+            <br />
+            <label for="lucky-number-input">Enter your lucky number :</label>
+            <br />
+            <input type="number" class="lucky-number-input">
+            <br />
+            <button class="check-btn">Check</button>
+            <br />
+            <p class="output-div"></p>
+        </div>
+    </section>
+    <footer>
+        <h4 class="footer-heading">We don't Store anykind of data!</h4>
+        <div>reach us at 🚀</div>
+        <ul>
+            <li class="inline-list">
+                <a href="https://www.facebook.com/prajkt.gunjal"><i class="bi bi-facebook"></i></a>
+            </li>
+            <li class="inline-list">
+                <a href="https://www.instagram.com/banty_g_1999"><i class="bi bi-instagram"></i></a>
+            </li>
+            <li class="inline-list">
+                <a href="https://github.com/gunjal-prajakt26"><i class="bi bi-github"></i></a>
+            </li>
+            <li class="inline-list">
+                <a href="https://www.linkedin.com/in/prajakt-gunjal-2a7039202"><i class="bi bi-linkedin"></i></a>
+            </li>
+            <li class="inline-list">
+                <a href="https://twitter.com/gunjal_prajakt"><i class="bi bi-twitter"></i></a>
+            </li>
+            <li class="inline-list">
+                <a href="mailto:gunjal.prajakt951@gmail.com"><i class="bi bi-envelope-fill"></i></a>
+            </li>
+        </ul>
+    </footer>
     <script src="app.js"></script>
 </body>
+
 </html>
